refactor CheckItemService,standardize GlobalExceptionHandler and add CheckItemServiceTest